@@ -13,7 +13,7 @@ namespace import ::tcltest::*
 
 source [file dirname [info script]]/setup.tcl
 
-test operator {operators} -setup $SETUP -body {
+test ro_operator {read-only operators} -setup $SETUP -body {
     set dbenv [duro::env open [configure -tmpdir]/dbenv]
     
     # Create Database
@@ -22,6 +22,75 @@ test operator {operators} -setup $SETUP -body {
     # Start transaction
     set tx [duro::begin $dbenv TEST]
     
+    # Create read-only operator
+    duro::operator create concat -returns STRING {a STRING b STRING} {
+        return $a$b
+    } $tx
+
+    # Create read-only operator with relation argument and return value
+    duro::operator create relop1 -returns {relation {A STRING}} \
+            {r {relation {A STRING}}} {
+        lappend r {A b}
+        return $r
+    } $tx
+
+    # Create read-only operator with tuple argument
+    duro::operator create TSWAP -returns {tuple {A STRING} {B STRING}} \
+        {r {tuple {A STRING} {B STRING}}} {
+        array set a $r
+        return [list A $a(B) B $a(A)]
+    } $tx
+    
+    # Create read-only operator w/o arguments
+    duro::operator create zero -returns INTEGER {} {
+        return 0
+    } $tx
+
+    if {![tequal [duro::expr {TSWAP (TUPLE {A "a", B "b"})} $tx] {A b B a}]} {
+        error "unexpected value of TSWAP()"
+    }
+    
+    duro::commit $tx
+    
+    # Close DB environment
+    duro::env close $dbenv
+    
+    # Reopen DB environment
+    set dbenv [duro::env open [configure -tmpdir]/dbenv]
+    
+    set tx [duro::begin $dbenv TEST]
+    
+    set v [duro::expr {concat("X", "Y")} $tx]
+    if {![string equal $v XY]} {
+       error "result is %s, should be %s" $v XY
+    }
+    
+    set v [duro::expr {zero()} $tx]
+    if {$v != 0} {
+        error "result of zero is $v"
+    }
+    
+    # Delete operator
+    duro::operator drop concat $tx
+    
+    set r [duro::expr {relop1(RELATION {TUPLE {A "a"}})} $tx]
+    set sr {{A a} {A b}}
+    if {[lsort $r] != $sr} {
+        error "relation should be $sr, but is $r"
+    }
+    
+    duro::commit $tx
+}
+
+test upd_operator {update operators} -setup $SETUP -body {
+    set dbenv [duro::env open [configure -tmpdir]/dbenv]
+    
+    # Create Database
+    duro::db create $dbenv TEST
+    
+    # Start transaction
+    set tx [duro::begin $dbenv TEST]
+
     # Create overloaded update operator
     
     duro::operator create strmul -updates {a} {a STRING b STRING} {
@@ -38,26 +107,14 @@ test operator {operators} -setup $SETUP -body {
             append la $h
         }
     } $tx
-    
-    # Create read-only operator
-    duro::operator create concat -returns STRING {a STRING b STRING} {
-        return $a$b
-    } $tx
-    
-    # Create read-only operator with relation argument and return value
-    duro::operator create relop1 -returns {relation {A STRING}} \
-            {r {relation {A STRING}}} {
-        lappend r {A b}
-        return $r
-    } $tx
-    
-    # Create read-only operator with tuple argument
-    duro::operator create TSWAP -returns {tuple {A STRING} {B STRING}} \
-        {r {tuple {A STRING} {B STRING}}} {
-        array set a $r
-        return [list A $a(B) B $a(A)]
-    } $tx
-    
+
+    # Create update operator with relation argument
+
+	duro::operator create TUP0 -updates {t} {t {tuple {I INTEGER}}} {
+    	upvar $t tl
+	    set tl {I 0}
+	} $tx
+
     # Create update operator with relation argument
     duro::operator create relop2 -updates {r1} {r1 {relation {A STRING}} \
             r2 {relation {A STRING}}} {
@@ -65,15 +122,14 @@ test operator {operators} -setup $SETUP -body {
             duro::insert $r1 $i $tx
         }
     } $tx
-    
-    # Create read-only operator w/o arguments
-    duro::operator create zero -returns INTEGER {} {
-        return 0
-    } $tx
-    
-    if {![tequal [duro::expr {TSWAP (TUPLE {A "a", B "b"})} $tx] {A b B a}]} {
-        error "unexpected value of TSWAP()"
-    }
+
+	# Test TUP0
+
+    set t {I 1}
+
+    duro::call TUP0 t {tuple {I INTEGER}} $tx
+
+    puts $t
     
     duro::table create -local t {
        {A STRING}
@@ -86,9 +142,9 @@ test operator {operators} -setup $SETUP -body {
     set arr [duro::array create t {A asc} $tx]
     checkarray $arr {{A a} {A b}} $tx
     duro::array drop $arr
-    
+
     duro::commit $tx
-    
+
     # Close DB environment
     duro::env close $dbenv
     
@@ -96,7 +152,7 @@ test operator {operators} -setup $SETUP -body {
     set dbenv [duro::env open [configure -tmpdir]/dbenv]
     
     set tx [duro::begin $dbenv TEST]
-    
+
     # Invoke update operator
     set v foo
     duro::call strmul v STRING bar STRING $tx
@@ -117,22 +173,10 @@ test operator {operators} -setup $SETUP -body {
         error "global variable was modified by operator"
     }
     
-    set v [duro::expr {concat("X", "Y")} $tx]
-    if {![string equal $v XY]} {
-       error "result is %s, should be %s" $v XY
-    }
-    
-    set v [duro::expr {zero()} $tx]
-    if {$v != 0} {
-        error "result of zero is $v"
-    }
-    
-    # Destroy operators
     duro::operator drop strmul $tx
-    duro::operator drop concat $tx
-    
-    # try to invoke deleted operator
-    
+
+    # Try to invoke deleted operator
+
     if {![catch {
         duro::call strmul v STRING bar STRING $tx
     } err]} {
@@ -142,17 +186,11 @@ test operator {operators} -setup $SETUP -body {
     if {![string match "OPERATOR_NOT_FOUND_ERROR(*)" $errcode]} {
         error "Wrong error code: $errcode"
     }
-    
-    set r [duro::expr {relop1(RELATION {TUPLE {A "a"}})} $tx]
-    set sr {{A a} {A b}}
-    if {[lsort $r] != $sr} {
-        error "relation should be $sr, but is $r"
-    }
-    
+
     duro::table create -local t {
        {A STRING}
     } {{A}} $tx
-    
+
     duro::call relop2 t {relation {A STRING}} {{A b} {A c}} {relation {A STRING}} \
             $tx
     
@@ -161,8 +199,9 @@ test operator {operators} -setup $SETUP -body {
     duro::array drop $arr
     
     duro::table drop t $tx
-    
+
     duro::commit $tx
+} -output {I 0
 }
 
 cleanupTests
